updated About me page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,33 +6,33 @@ import Layout from '../components/layouts/Layout.astro';
   title='About'
   description="Learn more about Aleksa, a junior React developer with a strong foundation in building user interfaces and front-end applications. Passionate about coding and dedicated to creating visually appealing and user-friendly experiences, Aleksa (or Alexa) is always looking to improve and expand their skills. Read more about Aleksa's background and experience on their about page."
 >
-  <h1>About me</h1>
+  <h1>whoami</h1>
   <p>
-    Born in 1996, I was raised during the digital revolution. As a teenager, I developed a passion for building websites
-    and became increasingly fascinated by the digital economy.
+    By day I am a professional software engineer building web applications for enterprises. By night I am an OSINT investigator and hacker exploring the internet streets with . I started coding in 2015 and I have been hooked since. I started with Java, C, then moved on to .NET (C#), and now I mainly use Javascript (React, NextJS, Svelte, Astro, Typescript) and Python. I am starting to dabble in GoLang as well. 
   </p>
   <p>
-    After finishing high school, I pursued a Bachelor's degree in <span class='highlight'>Computer Science</span> at Singidunum
-    University, complementing my studies with a variety of online courses to enhance my knowledge and abilities.
+    I have a Master's in <span class='highlight'>Computer Science</span> with a concentration in machine learning and data science. I also gained exposure to penetration testing, digital forensics, computer architecture, digital logic, and data structures & algorithms.
   </p>
   <p>
-    As an passionate and motivated <span class='highlight'>full-stack web developer</span>, I'm always eager to
-    transform ideas into applications. My goal is to stay at the forefront of the ever-changing <span class='highlight'
-      >web development</span
-    > world, actively seeking new learning opportunities and projects to continue improving my skills.
+    I enjoy spending my time with <span class='highlight'>The Hacker Community</span>, where I am upskilling my offesive and defensive information security skill in the internet wilds.
+    I am particularly interested in applying my knowledge of coding to learn <span class='highlight'
+      >malware development</span> to do bug bounties and vulnerabilty research. I love attending cybersecurity conferences and meetups to learn from the best in the industry.
   </p>
   <p>
-    In my work, I strive to create <span class='highlight'>modern, responsive websites and applications</span> that meet
-    the needs and desires of my clients, while also finding innovative solutions to problems through collaboration.
+   My music career began in 2023 when I was taking courses on cyberwarfare and international security & intelligence at Harvard Extension School. 
+   I wanted to incorporate music into my nerdy obsession with spies so <span class='highlight'>I invented Spycore</span> despite having no training or natural talent in music. I was also an early adopter of using AI to make music. I trained a model on my voice and then created beats and lyrics with AI and combined it all in Bandlab Studio. 
   </p>
   <p>
-    During my free time, I enjoy traveling, watching movies or playing basketball and video games. I also have a soft
-    spot for cats and relish the opportunity to pet them whenever possible. 😸
+    In late 2023, I learned of DEFCON and nerdcore music while attending a cybersecurity conference. I was excited that there were other nerds like me so I went onto YouTube where I discovered YTCracker's song, The Link. I am inspired by the likes of YTCracker, MC Frontalot, and Yung Innanet. I am also a huge fan of the early 2000s and 2010s rap and hip-hop scene. I am also a fan of bass heavy trap and dubstep music by artists like Pretty Lights, Bassnectar, and LSDream.
+  </p>
+
+  <p>
+    My goal is to continue to create music that is a blend of intelligence, geopolitics, security, and technology. I hope to inspire others to not be afraid to step out of the box and march ot the beat of your own drum to follow your passions and live your dreams. 
   </p>
   <p
     style="font-family: 'SegoeScript', cursive;"
     class='select-none px-8 text-right text-3xl font-bold xs:px-16 sm:text-4xl'
   >
-    aleksa
+    Scarlett Danger
   </p>
 </Layout>
