--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,15 +19,15 @@ import Layout from '../components/layouts/Layout.astro';
   </div>
   <h1 class='mb-[-48px] lg:mb-[-48px]'>
     My name is <span
-      class='bg-gradient-to-r from-base-content to-indigo-500 bg-clip-text font-extrabold text-transparent dark:from-base-content dark:to-indigo-300'
-      >Aleksa</span
+      class='bg-gradient-to-r from-base-content to-red-500 bg-clip-text font-extrabold text-transparent dark:from-base-content dark:to-red-300'
+      >Scarlett Danger</span
     >
   </h1>
   <h2>
-    I design and build{' '}
-    <span class='highlight-heading animate-box-shadow dark:animate-winter-box-shadow'>things for the web.</span>
+    This is my{' '}
+    <span class='highlight-heading animate-box-shadow dark:animate-winter-box-shadow'>Creative Studio.</span>
   </h2>
-  <div class='text-xl font-semibold'>Computer Science Student and Web Developer.</div>
+  <div class='text-xl font-semibold'>Programmer | Hacker | Artist </div>
   <div class='mx-auto mt-4 h-[275px] w-[275px] bg-laptop sm:h-[350px] sm:w-[350px] md:h-[450px] md:w-[450px]'>
     <!-- Laptop image here -->
   </div>
