personalizing the site for Scarlett Danger

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,12 +18,12 @@ import { days } from '../data/day';
         <div class='footer-text-t font-medium'>
           © <span id='current-year'></span> Code by{' '}
           <a
-            href='https://github.com/aleksa-codes/astro-portfolio'
+            href='https://github.com/scarlett-danger'
             target='_blank'
             rel='noopener noreferrer'
             class='hover:underline'
           >
-            aleksa</a
+            Scarlett Danger</a
           >{' '}• art via{' '}<a
             href='https://storyset.com/'
             target='_blank'
