--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -25,7 +25,7 @@ import { navItems } from '../data/nav';
           </li>
         ))
       }
-      <li class='tooltip tooltip-bottom tooltip-success' data-tip='Resume'>
+      <!-- <li class='tooltip tooltip-bottom tooltip-success' data-tip='Resume'>
         <a
           href='https://aleksa-codes.github.io/resume'
           target='_blank'
@@ -52,10 +52,10 @@ import { navItems } from '../data/nav';
             <path d='M4.5 17l-1.5 5l3 -1.5l3 1.5l-1.5 -5'></path>
           </svg>
         </a>
-      </li>
+      </li> -->
       <li class='tooltip tooltip-bottom tooltip-info' data-tip='GitHub'>
         <a
-          href='https://github.com/aleksa-codes'
+          href='https://github.com/scarlett-danger'
           target='_blank'
           rel='noopener noreferrer'
           aria-label='GitHub Profile'
@@ -80,7 +80,34 @@ import { navItems } from '../data/nav';
           </svg>
         </a>
       </li>
-      <li class='tooltip tooltip-bottom tooltip-warning' data-tip='RSS'>
+      <li class='tooltip tooltip-bottom tooltip-info' data-tip='GitHub'>
+        <a
+          href='https://github.com/scarlett-danger'
+          target='_blank'
+          rel='noopener noreferrer'
+          aria-label='Soundcloud Profile'
+          class='rounded-md p-3 hover:bg-base-content/20 hover:text-current active:bg-base-content/30 active:text-current'
+        >
+          <svg
+            xmlns='http://www.w3.org/2000/svg'
+            class='icon icon-tabler icon-tabler-brand-soundcloud'
+            width='24'
+            height='24'
+            viewBox='0 0 24 24'
+            stroke-width='2'
+            stroke='currentColor'
+            fill='none'
+            stroke-linecap='round'
+            stroke-linejoin='round'
+          >
+            <path stroke='none' d='M0 0h24v24H0z' fill='none'></path>
+            <path
+              d='M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5'
+            ></path>
+          </svg>
+        </a>
+      </li>
+      <!-- <li class='tooltip tooltip-bottom tooltip-warning' data-tip='RSS'>
         <a
           href='/rss.xml'
           aria-label='RSS Feed'
@@ -104,7 +131,7 @@ import { navItems } from '../data/nav';
             <path d='M4 11a9 9 0 0 1 9 9'></path>
           </svg>
         </a>
-      </li>
+      </li> -->
       <li>
         <DarkMode />
       </li>
