--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -26,7 +26,7 @@ export interface Props {
 const {
   title,
   description,
-  siteName = 'aleksa.codes',
+  siteName = `Scarlett Danger's Studio`,
   canonical,
   ogImage,
   ogType,
@@ -71,7 +71,7 @@ const {
     <!-- Snow effect based on if it's winter -->
     <script src='../../scripts/snow.ts'></script>
     <!-- Buy me a coffee -->
-    <script
+    <!-- <script
       is:inline
       data-name='BMC-Widget'
       data-cfasync='false'
@@ -82,6 +82,6 @@ const {
       data-color='#fb923c'
       data-position='Right'
       data-x_margin='8'
-      data-y_margin='8'></script>
+      data-y_margin='8'></script> -->
   </body>
 </html>
