--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import Layout from '../components/layouts/Layout.astro';
 >
   <h1>whoami</h1>
   <p>
-    By day I am a professional software engineer building web applications for enterprises. By night I am an OSINT investigator and hacker exploring the internet streets with . I started coding in 2015 and I have been hooked since. I started with Java, C, then moved on to .NET (C#), and now I mainly use Javascript (React, NextJS, Svelte, Astro, Typescript) and Python. I am starting to dabble in GoLang as well. 
+    By day I am a professional software engineer building web applications for enterprises. By night I am an OSINT investigator and hacker exploring the internet streets . I started coding in 2015 and I have been hooked since. I started with Java, C, then moved on to .NET (C#), and now I mainly use Javascript (React, NextJS, Svelte, Astro, Typescript) and Python. I am starting to dabble in GoLang as well. 
   </p>
   <p>
     I have a Master's in <span class='highlight'>Computer Science</span> with a concentration in machine learning and data science. I also gained exposure to penetration testing, digital forensics, computer architecture, digital logic, and data structures & algorithms.
