removing blog posts

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -13,7 +13,7 @@ const { page } = Astro.props;
 
 <Layout
   title='Blog'
-  description="Stay informed on the latest web development trends and techniques with Aleksa's blog. As a junior React developer skilled in using Next.js, TypeScript, and Tailwind CSS, Aleksa (or Alexa) shares their insights and experiences on various front-end development topics. Visit the blog page to read more and discover new ways to enhance your skills as a developer."
+  description="Stay informed on the latest web development, OSINT, and Information Security trends and techniques with Scarlett Danger's blog."
 >
   <h1>Blog</h1>
   <div>
