--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,8 @@
 ---
-import DarkMode from './DarkMode.astro';
+// import DarkMode from './DarkMode.astro';
+import { Image } from 'astro:assets';
 import { navItems } from '../data/nav';
+import logo from '../../public/assets/Scarlett_Danger_Logo-removebg-preview.png';
 ---
 
 <div class='navbar sticky top-0 z-50 bg-base-100 pb-2 pt-4 opacity-[0.925] md:pb-4 md:pt-6'>
@@ -8,7 +10,8 @@ import { navItems } from '../data/nav';
     <a class='flex items-center gap-4 p-2 font-bold hover:underline md:text-2xl' href='/'>
       <!-- for image before the site title, uncomment img below and remove pt-4 from the 1st parent div above
         <img src="https://api.lorem.space/image/face?w=96&h=96" width="48" height="48" alt="Astro Blog" class="rounded-full bg-base-200 md:w-12 md:h-12 w-9 h-9">  -->
-      <span id='typed-logo'></span>
+      <!-- <span id='typed-logo'></span> -->
+       <Image height={200} width={300} src={logo} alt="Scarlett Danger Logo" />
     </a>
   </div>
   <div class='flex-none'>
@@ -80,31 +83,24 @@ import { navItems } from '../data/nav';
           </svg>
         </a>
       </li>
-      <li class='tooltip tooltip-bottom tooltip-info' data-tip='GitHub'>
+      <li class='tooltip tooltip-bottom tooltip-info' data-tip='Soundcloud'>
         <a
-          href='https://github.com/scarlett-danger'
+          href='https://soundcloud.com/scarlett_danger'
           target='_blank'
           rel='noopener noreferrer'
           aria-label='Soundcloud Profile'
           class='rounded-md p-3 hover:bg-base-content/20 hover:text-current active:bg-base-content/30 active:text-current'
         >
-          <svg
-            xmlns='http://www.w3.org/2000/svg'
-            class='icon icon-tabler icon-tabler-brand-soundcloud'
-            width='24'
-            height='24'
-            viewBox='0 0 24 24'
-            stroke-width='2'
-            stroke='currentColor'
-            fill='none'
-            stroke-linecap='round'
-            stroke-linejoin='round'
-          >
-            <path stroke='none' d='M0 0h24v24H0z' fill='none'></path>
-            <path
-              d='M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5'
-            ></path>
-          </svg>
+     <svg  xmlns='http://www.w3.org/2000/svg'
+     class='icon icon-tabler icon-tabler-brand-github'
+     width='50'
+     height='50'
+     viewBox='0 0 1000 1000'
+     stroke-width='2'
+     stroke='currentColor'
+     fill='none'
+     stroke-linecap='round'
+     stroke-linejoin='round'><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><linearGradient id="a" gradientUnits="userSpaceOnUse" x1="-916.598" y1="1716.657" x2="-916.598" y2="1663.651" gradientTransform="matrix(10.6432 0 0 -10.6432 10265.9 18285.979)"><stop offset="0" stop-color="#f79810"></stop><stop offset="1" stop-color="#f8310e"></stop></linearGradient><path d="M26.791 272.388c-2.065 0-3.704 1.597-3.971 3.874l-7.237 54.972 7.237 54.025c.267 2.277 1.905 3.863 3.971 3.863 2 0 3.629-1.575 3.948-3.843v-.011.011l8.578-54.046-8.578-54.982c-.309-2.267-1.958-3.863-3.948-3.863zm40.699-30.035c-.341-2.362-2.033-3.991-4.119-3.991-2.097 0-3.832 1.682-4.119 3.991 0 .021-9.728 88.881-9.728 88.881l9.728 86.912c.277 2.331 2.012 4.013 4.119 4.013 2.075 0 3.768-1.639 4.108-3.991l11.068-86.934-11.057-88.881zm153.304-81.984c-3.991 0-7.291 3.267-7.482 7.418l-7.748 163.521 7.748 105.676c.202 4.129 3.491 7.386 7.482 7.386 3.97 0 7.259-3.268 7.493-7.407v.032l8.759-105.687-8.759-163.521c-.235-4.151-3.524-7.418-7.493-7.418zm-79.345 56.834c-3.065 0-5.566 2.448-5.812 5.715l-8.727 108.347 8.727 104.824c.234 3.246 2.746 5.694 5.812 5.694 3.033 0 5.534-2.448 5.801-5.694l9.919-104.824-9.919-108.369c-.267-3.245-2.768-5.693-5.801-5.693zM301.427 444.36c4.949 0 8.972-3.992 9.174-9.101l7.6-103.898-7.589-217.706c-.202-5.109-4.226-9.1-9.174-9.1-4.992 0-9.025 4.002-9.186 9.111l-6.737 217.684 6.737 103.941c.16 5.067 4.193 9.069 9.175 9.069zm165.075.49c6.812 0 12.432-5.609 12.559-12.506v.074-.074l5.301-100.919-5.302-251.434c-.117-6.886-5.747-12.505-12.559-12.505-6.822 0-12.452 5.609-12.559 12.516l-4.736 251.338c0 .16 4.736 101.067 4.736 101.067.108 6.833 5.748 12.443 12.56 12.443zm-83.166-.394c5.929 0 10.707-4.758 10.867-10.824v.074l6.449-102.323-6.46-219.281c-.16-6.067-4.938-10.813-10.867-10.813-5.971 0-10.749 4.747-10.877 10.813l-5.736 219.292 5.747 102.302c.128 6.002 4.906 10.76 10.877 10.76zm-202.369-.958c3.523 0 6.376-2.821 6.642-6.535l9.345-105.697-9.345-100.546c-.255-3.714-3.107-6.514-6.642-6.514-3.575 0-6.428 2.82-6.651 6.557l-8.228 100.503 8.228 105.687c.234 3.724 3.075 6.545 6.651 6.545zm-78.716-5.79c2.575 0 4.661-2.033 4.959-4.843l10.494-101.621-10.484-105.452c-.309-2.82-2.395-4.854-4.97-4.854-2.608 0-4.694 2.044-4.96 4.854l-9.238 105.452 9.238 101.6c.256 2.82 2.342 4.864 4.961 4.864zM424.76 108.451c-6.439 0-11.602 5.12-11.729 11.676l-5.236 211.277 5.236 101.663c.128 6.471 5.279 11.591 11.729 11.591 6.428 0 11.559-5.109 11.707-11.665v.085l5.875-101.663-5.875-211.31c-.149-6.534-5.28-11.654-11.707-11.654zM260.961 444.573c4.449 0 8.121-3.63 8.334-8.26l8.174-104.974-8.174-200.921c-.224-4.641-3.885-8.259-8.334-8.259-4.491 0-8.152 3.629-8.344 8.259l-7.237 200.921 7.248 105.017c.18 4.587 3.841 8.217 8.333 8.217zm91.276-9.909v-.054l7.024-103.238-7.024-225.039c-.171-5.587-4.577-9.972-10.016-9.972-5.471 0-9.877 4.374-10.025 9.972l-6.237 225.028 6.247 103.292c.149 5.534 4.556 9.908 10.016 9.908 5.449 0 9.834-4.374 10.016-9.94v.043zm531.284-233.011c-16.678 0-32.589 3.374-47.085 9.451-9.686-109.709-101.685-195.77-213.906-195.77-27.459 0-54.227 5.407-77.865 14.549-9.185 3.555-11.633 7.216-11.718 14.315v386.346c.096 7.45 5.875 13.655 13.145 14.39.309.032 335.248.202 337.42.202 67.222 0 121.726-54.504 121.726-121.736-.001-67.233-54.494-121.747-121.717-121.747zM508.063 43.858c-7.312 0-13.314 6.003-13.421 13.378l-5.492 274.221 5.503 99.524c.096 7.27 6.099 13.262 13.41 13.262 7.29 0 13.293-5.992 13.399-13.368v.117l5.971-99.535-5.971-274.242c-.106-7.354-6.109-13.357-13.399-13.357zM113.884 522.523c-14.4-3.385-18.296-5.194-18.296-10.899 0-4.022 3.246-8.184 12.974-8.184 8.312 0 14.805 3.373 20.638 9.344l13.102-12.707c-8.567-8.951-18.945-14.273-33.079-14.273-17.923 0-32.451 10.122-32.451 26.608 0 17.901 11.687 23.224 28.418 27.108 17.124 3.885 20.243 6.492 20.243 12.335 0 6.876-5.077 9.866-15.827 9.866-8.695 0-16.869-2.98-23.233-10.398L73.269 563.01c6.875 10.122 20.126 16.476 35.292 16.476 24.799 0 35.697-11.676 35.697-28.928.001-19.733-15.964-24.661-30.374-28.035zm83.59-36.719c-24.777 0-39.433 19.201-39.433 46.841 0 27.641 14.655 46.83 39.433 46.83s39.454-19.189 39.454-46.83c0-27.64-14.676-46.841-39.454-46.841zm0 75.652c-14.655 0-20.765-12.591-20.765-28.801 0-16.22 6.109-28.811 20.765-28.811 14.677 0 20.765 12.591 20.765 28.811 0 16.21-6.088 28.801-20.765 28.801zm112.776-23.224c0 14.528-7.152 23.489-18.689 23.489-11.548 0-18.552-9.217-18.552-23.744V487.22h-18.178v51.013c0 26.459 14.805 41.253 36.729 41.253 23.096 0 36.857-15.188 36.857-41.508V487.22H310.25v51.012zm96.533-12.59c0 5.066.255 16.476.255 19.85-1.17-2.342-4.15-6.876-6.354-10.26l-32.195-48.022h-17.381v90.851h17.913v-39.977c0-5.065-.256-16.476-.256-19.85 1.16 2.331 4.161 6.876 6.354 10.261l33.355 49.565h16.22v-90.851h-17.912v38.433h.001zm69.681-38.422h-28.417v90.85h27.107c23.362 0 46.469-13.506 46.469-45.425 0-33.228-19.211-45.425-45.159-45.425zm-1.31 73.203h-8.939v-55.546h9.6c19.211 0 27.13 9.206 27.13 27.768-.001 16.614-8.707 27.778-27.791 27.778zm102.654-56.589c8.174 0 13.367 3.64 16.613 9.866l16.869-7.78c-5.715-11.804-16.103-20.116-33.228-20.116-23.724 0-40.349 19.201-40.349 46.841 0 28.673 15.954 46.83 39.699 46.83 16.486 0 27.385-7.652 33.611-20.499l-15.305-9.089c-4.801 8.057-9.611 11.559-17.785 11.559-13.623 0-21.541-12.464-21.541-28.801-.009-16.859 7.803-28.811 21.416-28.811zm67.381-16.614h-18.168v90.85h54.6v-17.923h-36.432V487.22zm84.294-1.416c-24.798 0-39.454 19.201-39.454 46.841 0 27.641 14.656 46.83 39.454 46.83 24.777 0 39.443-19.189 39.443-46.83.001-27.64-14.666-46.841-39.443-46.841zm0 75.652c-14.677 0-20.765-12.591-20.765-28.801 0-16.22 6.088-28.811 20.765-28.811 14.646 0 20.743 12.591 20.743 28.811 0 16.21-6.097 28.801-20.743 28.801zm112.754-23.224c0 14.528-7.12 23.489-18.668 23.489-11.569 0-18.562-9.217-18.562-23.744V487.22H786.84v51.013c0 26.459 14.794 41.253 36.729 41.253 23.096 0 36.847-15.188 36.847-41.508V487.22h-18.179v51.012zm69.298-51.012h-28.407v90.85h27.108c23.372 0 46.457-13.506 46.457-45.425 0-33.228-19.2-45.425-45.158-45.425zm-1.299 73.203h-8.951v-55.546h9.611c19.189 0 27.107 9.206 27.107 27.768.001 16.614-8.695 27.778-27.767 27.778z" fill="url(#a)"></path></g></svg>
         </a>
       </li>
       <!-- <li class='tooltip tooltip-bottom tooltip-warning' data-tip='RSS'>
@@ -132,13 +128,13 @@ import { navItems } from '../data/nav';
           </svg>
         </a>
       </li> -->
-      <li>
+      <!-- <li>
         <DarkMode />
-      </li>
+      </li> -->
     </ul>
-    <div class='md:hidden'>
+    <!-- <div class='md:hidden'>
       <DarkMode />
-    </div>
+    </div> -->
     <div class='dropdown dropdown-end md:hidden'>
       <label tabindex={0} class='btn btn-square btn-ghost'>
         <svg
@@ -172,7 +168,7 @@ import { navItems } from '../data/nav';
           ))
         }
         <li class='flex flex-row items-center justify-around'>
-          <div class='tooltip tooltip-bottom tooltip-info' data-tip='Resume'>
+          <!-- <div class='tooltip tooltip-bottom tooltip-info' data-tip='Resume'>
             <a
               href='https://aleksa-codes.github.io/resume'
               target='_blank'
@@ -199,10 +195,10 @@ import { navItems } from '../data/nav';
                 <path d='M4.5 17l-1.5 5l3 -1.5l3 1.5l-1.5 -5'></path>
               </svg>
             </a>
-          </div>
+          </div> -->
           <div class='tooltip tooltip-bottom tooltip-info' data-tip='GitHub'>
             <a
-              href='https://github.com/aleksa-codes'
+              href='https://github.com/scarlett-danger'
               target='_blank'
               rel='noopener noreferrer'
               aria-label='GitHub Profile'
@@ -227,7 +223,18 @@ import { navItems } from '../data/nav';
               </svg>
             </a>
           </div>
-          <div class='tooltip tooltip-bottom tooltip-info' data-tip='RSS'>
+          <div class='tooltip tooltip-bottom tooltip-info' data-tip='Soundcloud'>
+            <a
+              href='https://soundcloud.com/scarlett_danger'
+              target='_blank'
+              rel='noopener noreferrer'
+              aria-label='Soundcloud Profile'
+              class='hover:bg-base-content/20 hover:text-current active:bg-base-content/30 active:text-current'
+            >
+            <svg xmlns="http://www.w3.org/2000/svg" width="512" height="512" xml:space="preserve"><path fill-rule="evenodd" clip-rule="evenodd" fill="#FF832D" d="M512 303.844c0 44.18-35.82 80-80 80h-32c-8.844 0-16-7.156-16-16s7.156-16 16-16h32c26.516 0 48-21.492 48-48s-21.484-48-48-48h-.25c-20.812 0-38.539-13.25-45.188-31.766-.047-.117-.156-.234-.195-.352-12.492-35.078-44.727-60.758-83.398-63.531-8.359.539-14.969 7.406-14.969 15.906v191.742c0 8.844-7.156 16-16 16s-16-7.156-16-16V176.102c0-26.32 21.156-47.617 47.398-47.945 52.242 2.984 95.961 37.297 112.891 84.438.078.078.234.156.258.234 2.094 6.398 8.102 11.016 15.203 11.016h.25c.891 0 1.766.102 2.656.141.156.014.391.014.524.014 42.711 1.688 76.82 36.734 76.82 79.844zm-304 80c-8.844 0-16-7.156-16-16v-176c0-8.844 7.156-16 16-16s16 7.156 16 16v176c0 8.844-7.156 16-16 16zm-64 0c-8.844 0-16-7.156-16-16V183.836c0-8.828 7.156-16 16-16s16 7.172 16 16v184.008c0 8.844-7.156 16-16 16zm-64 0c-8.844 0-16-7.156-16-16v-128c0-8.844 7.156-16 16-16s16 7.156 16 16v128c0 8.844-7.156 16-16 16zm-64-32c-8.844 0-16-7.156-16-16v-64c0-8.844 7.156-16 16-16s16 7.156 16 16v64c0 8.844-7.156 16-16 16zm320 0c8.844 0 16 7.156 16 16s-7.156 16-16 16-16-7.156-16-16 7.156-16 16-16z"/></svg>
+            </a>
+          </div>
+          <!-- <div class='tooltip tooltip-bottom tooltip-info' data-tip='RSS'>
             <a
               href='/rss.xml'
               aria-label='RSS Feed'
@@ -251,7 +258,7 @@ import { navItems } from '../data/nav';
                 <path d='M4 11a9 9 0 0 1 9 9'></path>
               </svg>
             </a>
-          </div>
+          </div> -->
         </li>
       </ul>
     </div>
