--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -53,6 +53,8 @@ const {
                 format={'webp'}
                 srcset={post.img + ' 1x,' + post.img + ' 2x'}
                 class='rounded bg-base-200'
+                width={500}
+                height={500}
               />
             </div>
           )
