minor text updates

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,13 +8,13 @@ import Layout from '../components/layouts/Layout.astro';
 >
   <h1>whoami</h1>
   <p>
-    By day I am a professional software engineer building web applications for enterprises. By night I am an OSINT investigator and hacker exploring the internet streets . I started coding in 2015 and I have been hooked since. I started with Java, C, then moved on to .NET (C#), and now I mainly use Javascript (React, NextJS, Svelte, Astro, Typescript) and Python. I am starting to dabble in GoLang as well. 
+    By day I am a professional software engineer building web applications for enterprises. By night I am an OSINT investigator and hacker using my skills to help others. I started coding in 2015 and I have been hooked since. I started with Java, C, then moved on to .NET (C#), and now I mainly use Javascript (React, NextJS, Svelte, Astro, Typescript) and Python. I am starting to dabble in GoLang as well. 
   </p>
   <p>
     I have a Master's in <span class='highlight'>Computer Science</span> with a concentration in machine learning and data science. I also gained exposure to penetration testing, digital forensics, computer architecture, digital logic, and data structures & algorithms.
   </p>
   <p>
-    I enjoy spending my time with <span class='highlight'>The Hacker Community</span>, where I am upskilling my offesive and defensive information security skill in the internet wilds.
+    I enjoy spending my time with <span class='highlight'>The Hacker Community</span>, where I am upskilling my offensive and defensive infoSec skills in the internet wilds.
     I am particularly interested in applying my knowledge of coding to learn <span class='highlight'
       >malware development</span> to do bug bounties and vulnerabilty research. I love attending cybersecurity conferences and meetups to learn from the best in the industry.
   </p>
