--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import Layout from '../components/layouts/Layout.astro';
   </h1>
   <h2>
     Welcome to my{' '}
-    <span class='highlight-heading animate-box-shadow dark:animate-winter-box-shadow'>Creative Studio.</span>
+    <span class='highlight-heading animate-box-shadow dark:animate-winter-box-shadow'>Studio.</span>
   </h2>
   <div class='text-xl font-semibold'>Programmer | H4ck3r | Artist </div>
   <div class='mx-auto mt-4 h-[275px] w-[275px] sm:h-[350px] sm:w-[350px] md:h-[450px] md:w-[450px]'>
