fixing about me section

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,10 +8,10 @@ import Layout from '../components/layouts/Layout.astro';
 >
   <h1>whoami</h1>
   <p>
-    By day I am a professional software engineer building web applications for enterprises. By night I am an OSINT investigator and hacker using my skills to help others. I started coding in 2015 and I have been hooked since. I started with Java, C, then moved on to .NET (C#), and now I mainly use Javascript (React, NextJS, Svelte, Astro, Typescript) and Python. I am starting to dabble in GoLang as well. 
+    By day I am a professional software engineer building web applications for large enterprises. By night I am an OSINT investigator and hacker using my skills to help others. I started coding in 2015 and I have been hooked since. I started with Java and C, then moved on to .NET (C#). Now I mainly use Javascript (React, NextJS, Svelte, Astro, Typescript) and Python. I am starting to dabble in Golang as well. 
   </p>
   <p>
-    I have a Master's in <span class='highlight'>Computer Science</span> with a concentration in machine learning and data science. I also gained exposure to penetration testing, digital forensics, computer architecture, digital logic, and data structures & algorithms.
+    I have a Master's in <span class='highlight'>Computer Science</span> with a concentration in machine learning and data science. During my studies I gained exposure to penetration testing, digital forensics, computer architecture, digital logic, and data structures & algorithms.
   </p>
   <p>
     I enjoy spending my time with <span class='highlight'>The Hacker Community</span>, where I am upskilling my offensive and defensive infoSec skills in the internet wilds.
@@ -23,11 +23,11 @@ import Layout from '../components/layouts/Layout.astro';
    I wanted to incorporate music into my nerdy obsession with spies so <span class='highlight'>I invented Spycore</span> despite having no training or natural talent in music. I was also an early adopter of using AI to make music. I trained a model on my voice and then created beats and lyrics with AI and combined it all in Bandlab Studio. 
   </p>
   <p>
-    In late 2023, I learned of DEFCON and nerdcore music while attending a cybersecurity conference. I was excited that there were other nerds like me so I went onto YouTube where I discovered YTCracker's song, The Link. I am inspired by the likes of YTCracker, MC Frontalot, and Yung Innanet. I am also a huge fan of the early 2000s and 2010s rap and hip-hop scene. I am also a fan of bass heavy trap and dubstep music by artists like Pretty Lights, Bassnectar, and LSDream.
+    In late 2023, I learned of DEFCON and nerdcore music while attending a local cybersecurity conference. I was excited that there were other nerds like me so I went onto YouTube where I discovered YTCracker's song, The Link. This really inspired me to continue working on my music despite my lack of natural talent and skill .I am a huge fan of the early 2000s and 2010s rap and hip-hop music, along with bass heavy trap and dubstep music by artists like Pretty Lights, Bassnectar, and LSDream. I let these influences guide me in creating my own unique sound.
   </p>
 
   <p>
-    My goal is to continue to create music that is a blend of intelligence, geopolitics, security, and technology. I hope to inspire others to not be afraid to step out of the box and march ot the beat of your own drum to follow your passions and live your dreams. 
+    My goal is to continue to continue learning to achieve certifications and create music that is a blend of rap, EDM, intelligence, geopolitics, security, and technology. I hope to inspire others to march ot the beat of their own drum to follow their passions and live their dreams. 
   </p>
   <p
     style="font-family: 'SegoeScript', cursive;"
