updated theme and css styling

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -11,7 +11,7 @@ import logo from '../../public/assets/Scarlett_Danger_Logo-removebg-preview.png'
       <!-- for image before the site title, uncomment img below and remove pt-4 from the 1st parent div above
         <img src="https://api.lorem.space/image/face?w=96&h=96" width="48" height="48" alt="Astro Blog" class="rounded-full bg-base-200 md:w-12 md:h-12 w-9 h-9">  -->
       <!-- <span id='typed-logo'></span> -->
-       <Image height={200} width={300} src={logo} alt="Scarlett Danger Logo" />
+       <Image height={150} width={150} src={logo} alt="Scarlett Danger Logo" /> 
     </a>
   </div>
   <div class='flex-none'>
@@ -223,7 +223,7 @@ import logo from '../../public/assets/Scarlett_Danger_Logo-removebg-preview.png'
               </svg>
             </a>
           </div>
-          <div class='tooltip tooltip-bottom tooltip-info' data-tip='Soundcloud'>
+          <!-- <div class='tooltip tooltip-bottom tooltip-info' data-tip='Soundcloud'>
             <a
               href='https://soundcloud.com/scarlett_danger'
               target='_blank'
@@ -233,7 +233,7 @@ import logo from '../../public/assets/Scarlett_Danger_Logo-removebg-preview.png'
             >
             <svg xmlns="http://www.w3.org/2000/svg" width="512" height="512" xml:space="preserve"><path fill-rule="evenodd" clip-rule="evenodd" fill="#FF832D" d="M512 303.844c0 44.18-35.82 80-80 80h-32c-8.844 0-16-7.156-16-16s7.156-16 16-16h32c26.516 0 48-21.492 48-48s-21.484-48-48-48h-.25c-20.812 0-38.539-13.25-45.188-31.766-.047-.117-.156-.234-.195-.352-12.492-35.078-44.727-60.758-83.398-63.531-8.359.539-14.969 7.406-14.969 15.906v191.742c0 8.844-7.156 16-16 16s-16-7.156-16-16V176.102c0-26.32 21.156-47.617 47.398-47.945 52.242 2.984 95.961 37.297 112.891 84.438.078.078.234.156.258.234 2.094 6.398 8.102 11.016 15.203 11.016h.25c.891 0 1.766.102 2.656.141.156.014.391.014.524.014 42.711 1.688 76.82 36.734 76.82 79.844zm-304 80c-8.844 0-16-7.156-16-16v-176c0-8.844 7.156-16 16-16s16 7.156 16 16v176c0 8.844-7.156 16-16 16zm-64 0c-8.844 0-16-7.156-16-16V183.836c0-8.828 7.156-16 16-16s16 7.172 16 16v184.008c0 8.844-7.156 16-16 16zm-64 0c-8.844 0-16-7.156-16-16v-128c0-8.844 7.156-16 16-16s16 7.156 16 16v128c0 8.844-7.156 16-16 16zm-64-32c-8.844 0-16-7.156-16-16v-64c0-8.844 7.156-16 16-16s16 7.156 16 16v64c0 8.844-7.156 16-16 16zm320 0c8.844 0 16 7.156 16 16s-7.156 16-16 16-16-7.156-16-16 7.156-16 16-16z"/></svg>
             </a>
-          </div>
+          </div> -->
           <!-- <div class='tooltip tooltip-bottom tooltip-info' data-tip='RSS'>
             <a
               href='/rss.xml'
