--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -11,7 +11,7 @@ export interface Props {
 }
 
 const DOMAIN = 'https://scarlettdanger.studio';
-const DEFAULT_OG_IMAGE = 'https://aleksa.codes/assets/aleksa-codes-og.png';
+const DEFAULT_OG_IMAGE = 'https://scarlettdanger.studio/assets/Scarlett Danger Logo.png';
 const {
   title = 'scarlettdanger.studio',
   description = "Scarlett Danger is the world's first spy rapper. She is also a programmer, OSINT investigator, and hacker.",
