adding author in blog post

--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -62,6 +62,7 @@ const {
       }
       <div class='text-center'>
         <h1>{post.title}</h1>
+        <h3> By {post.author}</h3>
         <div class='flex flex-row items-center justify-center gap-2 text-sm xs:text-base sm:text-lg'>
           <span>
             <Date date={post.date} />
