--- a/src/components/base-head.astro
+++ b/src/components/base-head.astro
@@ -119,10 +119,12 @@ const structuredData = {
 
   <title>{pageTitle}</title>
 
-  <link rel='preload' href='/fonts/poppins-v22-latin-regular.woff2' as='font' type='font/woff2' crossorigin />
-  <link rel='preload' href='/fonts/poppins-v22-latin-600.woff2' as='font' type='font/woff2' crossorigin />
-  <link rel='preload' href='/fonts/poppins-v22-latin-700.woff2' as='font' type='font/woff2' crossorigin />
-  <link rel='preload' href='/fonts/poppins-v22-latin-800.woff2' as='font' type='font/woff2' crossorigin />
+  <link rel='preload' href='/fonts/poppins-v22-latin-regular.woff2' as='font' type='font/woff2' />
+  <link rel='preload' href='/fonts/poppins-v22-latin-600.woff2' as='font' type='font/woff2' />
+  <link rel='preload' href='/fonts/poppins-v22-latin-700.woff2' as='font' type='font/woff2' />
+  <link rel='preload' href='/fonts/poppins-v22-latin-800.woff2' as='font' type='font/woff2' />
+
+  <link rel='preload' href='/laptop-animate.svg' as='image' type='image/svg+xml' />
 
   <link rel='alternate' type='application/rss+xml' title=`${siteName} Web Feed` href={new URL('rss.xml', baseUrl)} />
 
