--- a/src/components/snow-toggle.astro
+++ b/src/components/snow-toggle.astro
@@ -8,7 +8,7 @@ import { Icon } from 'astro-icon/components';
   aria-label='Toggle snow effect'
   variant='outline'
   size='icon'
-  class='invisible relative overflow-hidden bg-transparent'
+  class='invisible relative overflow-hidden'
 >
   <span class='sr-only'>Toggle snow effect</span>
   <Icon
