--- a/src/layouts/blog-layout.astro
+++ b/src/layouts/blog-layout.astro
@@ -47,7 +47,7 @@ const readableDate = date.toLocaleDateString('en-us', {
     tags,
   }}
 >
-  <div class='bg-base-200 fixed top-16 z-40 h-0.5 w-full opacity-0 transition-opacity duration-300'>
+  <div class='bg-base-200 fixed top-16 z-40 h-0.5 w-full opacity-0 transition-opacity duration-300 md:top-20'>
     <div class='bg-secondary h-full w-0 transition-all duration-150' id='progress-bar'></div>
   </div>
 
