--- a/src/components/breadcrumb.astro
+++ b/src/components/breadcrumb.astro
@@ -21,9 +21,11 @@ const pathSegments = currentPath.split('/').filter(Boolean);
 const formatSegmentText = (segment: string) => {
   // Replace hyphens and underscores with spaces
   const withSpaces = segment.replace(/[-_]/g, ' ');
-  // Split into words, capitalize only the first letter of the first word
-  const words = withSpaces.split(' ');
-  return words.map((word, index) => (index === 0 ? word.charAt(0).toUpperCase() + word.slice(1) : word)).join(' ');
+  // Split into words, capitalize each word, and join them back
+  return withSpaces
+    .split(' ')
+    .map((word) => word.charAt(0).toUpperCase() + word.slice(1))
+    .join(' ');
 };
 
 const generateBreadcrumbItems = () => {
@@ -49,12 +51,15 @@ const generateBreadcrumbItems = () => {
 const breadcrumbItems = generateBreadcrumbItems();
 ---
 
-<nav class='flex py-4' aria-label='Breadcrumb'>
-  <ol class='inline-flex items-center space-x-1 md:space-x-3'>
+<nav
+  class='[&::-webkit-scrollbar-track]:bg-base-300 [&::-webkit-scrollbar-thumb]:bg-base-content hover:[&::-webkit-scrollbar-thumb]:bg-base-content/50 overflow-x-auto py-4 [&::-webkit-scrollbar]:h-1.5 [&::-webkit-scrollbar-track]:rounded-full'
+  aria-label='Breadcrumb'
+>
+  <ol class='inline-flex items-center space-x-1 whitespace-nowrap md:space-x-3'>
     {
       breadcrumbItems.map((item, index) => (
         <li class='inline-flex items-center'>
-          {index !== 0 && <Icon name='lucide:chevron-right' class='text-base-content h-4 w-4' />}
+          {index !== 0 && <Icon name='lucide:chevron-right' class='text-base-content h-4 w-4 flex-shrink-0' />}
           {item.href ? (
             <a
               href={item.href}
@@ -63,13 +68,11 @@ const breadcrumbItems = generateBreadcrumbItems();
                 index !== 0 && 'ml-1 md:ml-2',
               )}
             >
-              {item.icon && <Icon name={item.icon} class='mr-2 h-4 w-4' />}
+              {item.icon && <Icon name={item.icon} class='mr-2 h-4 w-4 flex-shrink-0' />}
               {item.text}
             </a>
           ) : (
-            <span class='text-base-content ml-1 max-w-48 truncate text-sm font-medium sm:max-w-full md:ml-2'>
-              {item.text}
-            </span>
+            <span class='text-base-content ml-1 text-sm font-medium md:ml-2'>{item.text}</span>
           )}
         </li>
       ))
